--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -57,6 +57,10 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -651,6 +655,7 @@
     <Compile Include="Code\Exceptions\HandledException.cs" />
     <Compile Include="Code\Global.cs" />
     <Compile Include="Code\Helpers\ImageHelper.cs" />
+    <Compile Include="Code\Helpers\Logger.cs" />
     <Compile Include="Code\ModelBinders\ArtistBinder.cs" />
     <Compile Include="Code\Interfaces\IHasDbContext.cs" />
     <Compile Include="Code\ModelBinders\unused\LocalStringSetBinder.cs" />
