--- a/Web/packages.config
+++ b/Web/packages.config
@@ -5,6 +5,7 @@
   <package id="jQuery" version="2.2.3" targetFramework="net452" />
   <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
+  <package id="log4net" version="2.0.5" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net452" />
