Removed logo and played with styling a bit (removed some commented stuff)

--- a/Web/Web.config
+++ b/Web/Web.config
@@ -18,7 +18,7 @@
     <add key="DefaultLanguage" value="en"/>
     <add key="ListItemBatchSize" value="2"/>
     <add key="CompanyName" value="Record Label"/>
-    <add key="LogoFileName" value="logo.jpg"/>
+    <add key="LogoFileName" value=""/>
     <add key="ThumbnailWidth" value="150"/>
     <add key="ThumbnailQualityLevel" value="90"/>
     <add key="YoutubeLinkBase" value="https://www.youtube.com/v/"/>
