--- a/Web/Web.config
+++ b/Web/Web.config
@@ -48,7 +48,7 @@
   
   <system.web>
     <authentication mode="Forms">
-      <forms defaultUrl="~/Admin/Index" loginUrl="~/Admin/Login">
+      <forms defaultUrl="~/Management/Index" loginUrl="~/Management/Login">
         <credentials passwordFormat="SHA1">
           <user name="admin" password="5BAA61E4C9B93F3F0682250B6CF8331B7EE68FD8"/>
         </credentials>
