Separated posted value binding and selection from the database for MasterRelease and Attributes. Implemented updating of collections consisting of One-To-Many type of entity.

--- a/ContentModels/ContentModels.csproj
+++ b/ContentModels/ContentModels.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\OneToOneRelationship.cs" />
+    <Compile Include="DbContextHelper.cs" />
     <Compile Include="Enums\ImageType.cs" />
     <Compile Include="Exceptions\EntityInUseException.cs" />
     <Compile Include="Extensions\DbSetExtensions.cs" />
