--- a/ContentModels/ContentModels.csproj
+++ b/ContentModels/ContentModels.csproj
@@ -56,11 +56,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\OneToOneRelationship.cs" />
-    <Compile Include="DbContextHelper.cs" />
+    <Compile Include="DataAccess\ContextWrapper.cs" />
     <Compile Include="Enums\ImageType.cs" />
     <Compile Include="Exceptions\EntityInUseException.cs" />
     <Compile Include="Extensions\DbSetExtensions.cs" />
     <Compile Include="Extensions\ModelExtensions.cs" />
+    <Compile Include="DataAccess\LocalizationSetUpdater.cs" />
+    <Compile Include="Interfaces\IContextWrapper.cs" />
+    <Compile Include="Interfaces\ISet.cs" />
     <Compile Include="Localization\ContentLocalization.Designer.cs">
       <DependentUpon>ContentLocalization.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -97,6 +100,7 @@
     <Compile Include="Models\Base\Set.cs" />
     <Compile Include="Models\Track.cs" />
     <Compile Include="Models\Sets\Tracklist.cs" />
+    <Compile Include="DataAccess\SetUpdater.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
