--- a/ContentModels/ContentModels.csproj
+++ b/ContentModels/ContentModels.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{6812841D-4973-44B3-A2A7-0C2B487A5FF6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RecordLabel.Data</RootNamespace>
+    <RootNamespace>RecordLabel.okay</RootNamespace>
     <AssemblyName>ReleaseData</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -56,6 +56,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\CascadeOnDeleteAttribute.cs" />
+    <Compile Include="DataAccessRepository\EntityPropertyInfo.cs" />
+    <Compile Include="DataAccessRepository\EntityRelationshipType.cs" />
+    <Compile Include="DataAccessRepository\EntityRelationshipResolver.cs" />
+    <Compile Include="DataAccessRepository\RuntimeUpdater.cs" />
+    <Compile Include="DataAccessRepository\DbContextReflector.cs" />
+    <Compile Include="DataAccessRepository\CollectionUpdater.cs" />
     <Compile Include="Enums\ImageType.cs" />
     <Compile Include="Exceptions\EntityInUseException.cs" />
     <Compile Include="Extensions\DbSetExtensions.cs" />
@@ -86,6 +92,7 @@
     <Compile Include="Configurations\DropCreateAndSeedInitializer.cs" />
     <Compile Include="Models\Sets\ImageSet.cs" />
     <Compile Include="Models\Image.cs" />
+    <Compile Include="DataAccessRepository\Repository.cs" />
     <Compile Include="ReleaseContext.cs" />
     <Compile Include="Enums\PrintStatus.cs" />
     <Compile Include="Models\MainContent\Release.cs" />
@@ -94,7 +101,6 @@
     <Compile Include="Models\Metadata.cs" />
     <Compile Include="Models\LocalizedStrings\LocalizedStringBase.cs" />
     <Compile Include="Models\Track.cs" />
-    <Compile Include="Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
