--- a/ContentModels/ContentModels.csproj
+++ b/ContentModels/ContentModels.csproj
@@ -56,9 +56,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\CascadeOnDeleteAttribute.cs" />
+    <Compile Include="DataAccessRepository\ICollectionUpdater.cs" />
+    <Compile Include="DataAccessRepository\EntityUpdaters\NavUpdater.cs" />
+    <Compile Include="DataAccessRepository\EntityUpdaters\ScalarPropertyUpdater.cs" />
     <Compile Include="DataAccessRepository\EntityPropertyInfo.cs" />
     <Compile Include="DataAccessRepository\EntityRelationshipType.cs" />
     <Compile Include="DataAccessRepository\EntityRelationshipResolver.cs" />
+    <Compile Include="DataAccessRepository\EntityUpdaters\EntityUpdater.cs" />
+    <Compile Include="DataAccessRepository\EntityUpdaters\IEntityUpdater.cs" />
+    <Compile Include="DataAccessRepository\EntityUpdaters\IRecursiveEntityUpdater.cs" />
+    <Compile Include="DataAccessRepository\EntityUpdaters\EntityUpdaterBase.cs" />
     <Compile Include="DataAccessRepository\RuntimeUpdater.cs" />
     <Compile Include="DataAccessRepository\DbContextReflector.cs" />
     <Compile Include="DataAccessRepository\CollectionUpdater.cs" />
