Implemented dynamic detection of entity primary keys and now ScalarPropertyUndater uses this mechanism to search for entities in the context. Plus slightly refactored Context unit tests (added test cleanup)

--- a/ContentModels/ContentModels.csproj
+++ b/ContentModels/ContentModels.csproj
@@ -67,6 +67,7 @@
     <Compile Include="DataAccessRepository\EntityUpdaters\IEntityUpdater.cs" />
     <Compile Include="DataAccessRepository\EntityUpdaters\IRecursiveEntityUpdater.cs" />
     <Compile Include="DataAccessRepository\EntityUpdaters\EntityUpdaterBase.cs" />
+    <Compile Include="DataAccessRepository\EntityKeyPropertyInfo.cs" />
     <Compile Include="DataAccessRepository\RuntimeUpdater.cs" />
     <Compile Include="DataAccessRepository\DbContextReflector.cs" />
     <Compile Include="DataAccessRepository\CollectionUpdater.cs" />
