--- a/ContentModels/ContentModels.csproj
+++ b/ContentModels/ContentModels.csproj
@@ -70,6 +70,7 @@
     <Compile Include="DataAccessRepository\EntityUpdaters\IRecursiveEntityUpdater.cs" />
     <Compile Include="DataAccessRepository\EntityUpdaters\EntityUpdaterBase.cs" />
     <Compile Include="DataAccessRepository\EntityKeyPropertyInfo.cs" />
+    <Compile Include="DataAccessRepository\ReflectionExtensions.cs" />
     <Compile Include="DataAccessRepository\RuntimeUpdater.cs" />
     <Compile Include="DataAccessRepository\DbContextReflector.cs" />
     <Compile Include="DataAccessRepository\CollectionUpdater.cs" />
