Added an interface for EntityKeyComparer and commented out test that needs to be updated

--- a/Persistence/Persistence.csproj
+++ b/Persistence/Persistence.csproj
@@ -64,6 +64,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EPCore\EPCore.csproj">
+      <Project>{53025D5E-A52C-440C-BD02-2B215844DE4E}</Project>
+      <Name>EPCore</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
