--- a/EPCore/EPCore.csproj
+++ b/EPCore/EPCore.csproj
@@ -53,6 +53,7 @@
     <Compile Include="EntityPropertyInfo.cs" />
     <Compile Include="EntityRelationshipResolver.cs" />
     <Compile Include="EntityRelationshipType.cs" />
+    <Compile Include="IEntityComparerByKeys.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reflection\GenericMethodInvoker.cs" />
     <Compile Include="Reflection\ReflectionExtensions.cs" />
