Added a base class for EntityKeyPropertyInfo and renamed EntityNavigationPropertyInfo source file

--- a/EPCore/EPCore.csproj
+++ b/EPCore/EPCore.csproj
@@ -49,8 +49,9 @@
     <Compile Include="DbContextReflector.cs" />
     <Compile Include="EntityComparerByKeys.cs" />
     <Compile Include="EntityComparerByNonForeignKeys.cs" />
+    <Compile Include="EntityScalarPropertyInfo.cs" />
     <Compile Include="EntityKeyPropertyInfo.cs" />
-    <Compile Include="EntityPropertyInfo.cs" />
+    <Compile Include="EntityNavigationPropertyInfo.cs" />
     <Compile Include="EntityRelationshipResolver.cs" />
     <Compile Include="EntityRelationshipType.cs" />
     <Compile Include="IDbContextReflector.cs" />
