Changed EntityPlus references to dll's because I cannot get the whole Git Subtree thing to work. Refactored code to work with updates to EntityPlus

--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,4 @@ ModelManifest.xml
 /Web/Data/Images/Article/d3084031-c690-4849-8997-75b33d547988.jpg
 /Web/Content/Images/logo.jpg
 /Web/logs/log.txt
+/WebApplication1
