--- a/RepositoryTests/RepositoryTests.csproj
+++ b/RepositoryTests/RepositoryTests.csproj
@@ -43,6 +43,14 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="EPCore, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Libraries\EPCore.dll</HintPath>
+    </Reference>
+    <Reference Include="EPPersistence, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Libraries\EPPersistence.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
@@ -76,14 +84,6 @@
     <ProjectReference Include="..\Core\Common.csproj">
       <Project>{48f46b5a-4665-40bf-8779-52cb06411fa3}</Project>
       <Name>Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Repository\EntityPlus\EPCore\EPCore.csproj">
-      <Project>{53025d5e-a52c-440c-bd02-2b215844de4e}</Project>
-      <Name>EPCore</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Repository\EntityPlus\Persistence\Persistence.csproj">
-      <Project>{0edfb74c-6298-400c-96c4-b4c0f4e64e8d}</Project>
-      <Name>Persistence</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
